# codex-maintainer-kit

./: LICENSE  README.md  pyproject.toml
examples/: issues.json  prs.json
src/codex_maintainer_kit/: __init__.py  digest.py
tests/: test_digest.py
