[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-maintainer-kit"
version = "0.1.0"
description = "Markdown digests for open-source issue and pull request maintenance."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ChangLing" }]
keywords = ["github", "maintainers", "open-source", "triage", "release"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Bug Tracking",
]

[project.scripts]
maintainer-digest = "codex_maintainer_kit.digest:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
